# treefrog-framework

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .lgtm.yml  .travis.yml  AUTHOR  CHANGELOG.md  CNAME  ChangeLog  Doxyfile  INSTALL  INSTALL.ch  INSTALL.md  README  README.ch  README.ja  README.md  SECURITY.md  appveyor.yml  build.bat  build.sh  compile_install.bat  configure  configure.bat  copyright  index.html  lgtm.yml  params.json  tfbase.pri  tfenv.bat  update_rev.sh
.circleci/: config.yml
.github/: FUNDING.yml  codeql_build.sh
.github/workflows/: actions.yml  c-cpp.yml  codeql-analysis.yml
defaults/: 403.html  404.html  413.html  500.html  CMakeLists.txt  CacheClean.cmake  FindTreeFrog.cmake  TargetCmake.cmake  _dummymodel.cpp  _dummymodel.h  _src.pro  abort.bat  app.pro  appbase.pri  application.ini  applicationcontroller.cpp  applicationcontroller.h  applicationendpoint.cpp  applicationendpoint.h  applicationhelper.cpp  applicationhelper.h  cache.ini  controllers.pro  database.ini  development.ini  helpers.pro  internet_media_types.ini  logger.ini  mail.erb  memcached.ini  models.pro  mongodb.ini  pagination.erb  redis.ini  routes.cfg  service.bat  serviced.bat  shutdown.bat  startup.bat  validation.ini  (+2 more)
defaults/cmake/: TreeFrogConfig.cmake
defaults/controllers/: CMakeLists.txt
defaults/controllers_qt5/: CMakeLists.txt
defaults/helpers/: CMakeLists.txt
defaults/models/: CMakeLists.txt
defaults/models_qt5/: CMakeLists.txt
defaults/views/: CMakeLists.txt
defaults/views_qt5/: CMakeLists.txt
dockerfiles/: Dockerfile  latest
dockerfiles/1.15.0/: Dockerfile
dockerfiles/1.16.0/: Dockerfile
dockerfiles/1.17.0/: Dockerfile
dockerfiles/1.18.0/: Dockerfile
dockerfiles/1.19.0/: Dockerfile
dockerfiles/1.20.0/: Dockerfile
dockerfiles/1.21.0/: Dockerfile
dockerfiles/1.22.0/: Dockerfile
dockerfiles/1.23.0/: Dockerfile
dockerfiles/1.24.0/: Dockerfile
dockerfiles/1.25.0/: Dockerfile
dockerfiles/1.26.0/: Dockerfile
dockerfiles/1.27.0/: Dockerfile
dockerfiles/1.28.0/: Dockerfile
dockerfiles/1.29.0/: Dockerfile
dockerfiles/1.30.0/: Dockerfile
dockerfiles/1.31.0/: Dockerfile
dockerfiles/2.0.1/: Dockerfile
dockerfiles/2.0.2/: Dockerfile
dockerfiles/2.1.0/: Dockerfile
dockerfiles/2.10.0/: Dockerfile
dockerfiles/2.11.0/: Dockerfile
dockerfiles/2.12.0/: Dockerfile
dockerfiles/2.3.0/: Dockerfile
dockerfiles/2.3.1/: Dockerfile
dockerfiles/2.4.0/: Dockerfile
dockerfiles/2.5.0/: Dockerfile
dockerfiles/2.6.0/: Dockerfile
dockerfiles/2.7.0/: Dockerfile
dockerfiles/2.7.1/: Dockerfile
dockerfiles/2.8.0/: Dockerfile
dockerfiles/2.9.0/: Dockerfile
docs/: CNAME  Gemfile  README.md  _config.yml  index.md  search.html
docs/_includes/: analytics.html  disqus.html  footer.html  generateDynamicMenu.html  header.html  nav.html  navigation.html  search_json.html  side-navigation.html  top-navigation.html  translate_tool.html
docs/_layouts/: default.html  docindex.html
docs/api-reference/: index.md
docs/blog/: index.md
docs/ch/: index.md  search.html
docs/de/: index.md  search.html
docs/development/: index.md
docs/documents/: index.md
docs/download/: index.md
docs/en/: index.md
docs/faq/: index.md
docs/ja/: index.md  search.html
docs/jp/: index.md  search.html
examples/devapp/: appbase.pri  devapp.pro
examples/imggen/: imggen.pro
include/: TAbstractActionContext  TAbstractController  TAbstractModel  TAbstractUser  TAccessAuthenticator  TAccessLog  TAccessValidator  TActionContext  TActionController  TActionForkProcess  TActionHelper  TActionMailer  TActionThread  TActionView  TActionWorker  TAppSettings  TApplicationScheduler  TApplicationServer  TApplicationServerBase  TAtomic  TAtomicPtr  TAtomicQueue  TBackgroundProcess  TBackgroundProcessHandler  TBson  TCache  TCommandLineInterface  TContentHeader  TCookie  TCriteria  TCriteriaConverter  TCriteriaMongoConverter  TCryptMac  TDatabaseContext  TDatabaseContextThread  TDebug  TDirectView  TDispatcher  TFormValidator  TGlobal  (+204 more)
include/TfTest/: TfTest  tftest.h
installer/: .editorconfig  TreeFrog.wxs  create_installer.bat  license.rtf
installer/msi/: TreeFrog.wxs  TreeFrogFiles.wxs  create_installer.bat  license.rtf  old_create_installer.bat
installer/treefrog-setup/: treefrog-setup.sln
sqldrivers/clientlib/: COPYING_3RD_PARTY_DLL  README  sql_client_library_license
sqldrivers/macosx/: README  README.ja  install.command
sqldrivers/mingw/: LICENSE.GPL3  README.ja  install.bat
sqldrivers/qt4-mingw/: README
sqldrivers/qt5-mingw/: LICENSE.LGPL  README  README.ja  install_sqldrivers.bat
sqldrivers/qt5.0-mingw/: LICENSE.PREVIEW.COMMERCIAL  README  README.ja  install_sqldrivers.bat
sqldrivers/qt5.1-mingw/: README  README.ja
sqldrivers/qt5.1.0-mingw/: LGPL_EXCEPTION.txt  LICENSE.FDL  install_sqldrivers.bat
src/: Makefile  corelib.pro  directcontroller.cpp  directcontroller.h  libtreefrog.so.1.9.2  moc_directcontroller.cpp  moc_tabstractlogstream.cpp  moc_tactionthread.cpp  moc_tactionworker.cpp  moc_tapplicationscheduler.cpp  moc_tbasictimer.cpp  moc_tepollhttpsocket.cpp  moc_tepollsocket.cpp  moc_tepollwebsocket.cpp  moc_thttpsocket.cpp  moc_tkvsdatabasepool.cpp  moc_tloggerplugin.cpp  moc_tmultiplexingserver.cpp  moc_tpopmailer.cpp  moc_tpublisher.cpp  moc_tscheduler.cpp  moc_tsendmailmailer.cpp  moc_tsessionobject.cpp  moc_tsessionstoreplugin.cpp  moc_tsmtpmailer.cpp  moc_tsqldatabasepool.cpp  moc_tsqlobject.cpp  moc_tsystembus.cpp  moc_ttextview.cpp  moc_tthreadapplicationserver.cpp  moc_twebapplication.cpp  moc_twebsocket.cpp  moc_twebsocketworker.cpp  precompile.h  tabstractactioncontext.h  tabstractcontroller.cpp  tabstractcontroller.h  tabstractlogstream.cpp  tabstractlogstream.h  tabstractmodel.cpp  (+414 more)
src/test/: test.pri  test.pro  testall.bat  testall.sh
src/trash/: line_replace.bat  md5.cpp  md5.h  substr.bat  tactionprocess.cpp  tactionprocess.h  tactionprocess_unix.cpp  tapplicationscheduler.cpp  tapplicationscheduler.h  tatomicqueue.h  tatomicset.cpp  (+35 more)
test/: test.pri  test.pro
tools/: Makefile  tools.pro
(+763 files in other folders)
